--- a/templates/pacientes/citas/mis_proximas_citas_listar_form.html
+++ b/templates/pacientes/citas/mis_proximas_citas_listar_form.html
@@ -1,7 +1,7 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Listar Síntomas
+Diario Médico - Listar Próximas Citas
 {% endblock %}
 
 {% block content %}
@@ -16,21 +16,17 @@ Diario Médico - Listar Síntomas
 <a href="{% url 'listar_resultado_lab_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
 <a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis próximas citas</button></a>  
 </p>
-
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
-                                   <div class="panel-heading">
-                             <h3 class="panel-title"> </h3>
-                  <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas generales actuales</button></a>
-                    <a href="{% url 'listar_sintomas_alteracion_glicemica_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas alteración glicémica</button></a>
-                                
+                           <div class="panel-heading">
+                                <a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Citas</button></a>
                             </div>
                             <div class="panel-body">
-            <div class="col-lg-6">
+               <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
-                           <a href="{% url 'pacientes_sintomas_ingresar' %}"><h4><i class="fa fa-plus-square"></i> Adicionar síntoma</h4></a>
+                           <a href="{% url 'ingresar_cita_paciente' %}"><h4><i class="fa fa-plus-square"></i> Adicionar cita</h4></a>
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -39,16 +35,16 @@ Diario Médico - Listar Síntomas
                                     <thead>
                                         <tr>
           
-                                            <th>Descripción del síntoma</th>
+                                            <th>Cita</th>
                                          
                                         </tr>
                                     </thead>
-                                    {% for sintomas in object_list %}
+                                    {% for cita in object_list %}
                                     <tbody>
                                         <tr>
-                                            <td>{{sintomas.sintoma}}</td>
+                                            <td>{{cita.proveedor}}</td>
                                              <td>
-                                                 <a href={% url 'eliminar_sintomas_paciente' sintomas.id %}>Eliminar</a>
+                                                 <a href={% url 'eliminar_cita_paciente' cita.id %}>Eliminar</a>
                                                
                                             </td>
                                             
@@ -70,5 +66,6 @@ Diario Médico - Listar Síntomas
    </div>
 
 </div><!-- /.row -->
+
 
 {% endblock %}
