--- a/templates/pacientes/sintomas/mis_sintomas_form.html
+++ b/templates/pacientes/sintomas/mis_sintomas_form.html
@@ -10,21 +10,20 @@ Diario Médico - Ingresar Síntomas
 <p>
 <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
 <a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
-<a href="/paciente/diariomedico/mediciones/"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
-<a href="/paciente/diariomedico/rutinas/"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
-<a href="/paciente/diariomedico/tratamientos/"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
-<a href="/paciente/diariomedico/resultados/"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
-<a href="/paciente/diariomedico/citas/"><button type="button" class="btn btn-primary btn-sm">Mis próximas citas</button></a>                   
+<a href="{% url 'listar_peso_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
+<a href="{% url 'listar_ejercicio_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
+<a href="{% url 'listar_medicamento_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
+<a href="{% url 'listar_resultado_lab_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
+<a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis próximas citas</button></a>  
 </p>
 
 <div class="row">
   <div class="col-lg-12">
-
     <div class="panel panel-default">
-                            <div class="panel-heading">
+                                   <div class="panel-heading">
                              <h3 class="panel-title"> </h3>
                   <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas generales actuales</button></a>
-                    <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas alteración glicémica</button></a>
+                    <a href="{% url 'listar_sintomas_alteracion_glicemica_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas alteración glicémica</button></a>
                                 
                             </div>
                             <div class="panel-body">	
