--- a/templates/pacientes/medicionesclinicas/colesterol/mis_mediciones_clinicas_colesterol_form.html
+++ b/templates/pacientes/medicionesclinicas/colesterol/mis_mediciones_clinicas_colesterol_form.html
@@ -1,11 +1,10 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Mis Próximas Citas
+Diario Médico - Ingresar Colesterol
 {% endblock %}
 
 {% block content %}
-
 <br>
 <h1 class="page-header">Mi Diario Médico</h1>
 <p>
@@ -20,19 +19,28 @@ Diario Médico - Mis Próximas Citas
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
-                           <div class="panel-heading">
-                                <a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Citas</button></a>
+                            <div class="panel-heading">
+                    <a href="{% url 'listar_peso_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Peso</button></a>
+                    <a href="{% url 'listar_talla_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Talla</button></a>
+                    <a href="{% url 'listar_hemoglobina_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Hemoglobina Glicosilada</button></a>
+                    <a href="{% url 'listar_colesterol_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Colesterol & Triglicéridos</button></a>
+                    <a href="{% url 'listar_presion_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Presión Arterial</button></a>
+                    <a href="{% url 'listar_gluco_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> GlucoDay</button></a>
+                            </div>
+                                 <div class="panel-heading">
+                                
+                   
                             </div>
                             <div class="panel-body">
-                                           <div class="col-lg-4">
+                                         <div class="col-lg-6">
                     <div class="well well-sm">
                     <div class="alert alert-info">
-                        <h5><label>Citas: </label></h5></div>
+                        <h5><label>Colesterol: </label></h5></div>
                                      <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
               {{ form }}
               <p></p>
               <div class="tooltip-demo">
- <button type="submit" class="btn btn-info btn-circle" data-toggle="tooltip" data-placement="right" title="" data-original-title="Ingresar cita"><i class="fa fa-check"></i></button>
+ <button type="submit" class="btn btn-info btn-circle" data-toggle="tooltip" data-placement="right" title="" data-original-title="Ingresar colesterol"><i class="fa fa-check"></i></button>
  </div>
  <p></p>
               </form>
@@ -46,6 +54,5 @@ Diario Médico - Mis Próximas Citas
    </div>
 
 </div><!-- /.row -->
-
 
 {% endblock %}
