--- a/templates/pacientes/resultados_examenes/mis_resultados_examenes_form.html
+++ b/templates/pacientes/resultados_examenes/mis_resultados_examenes_form.html
@@ -10,20 +10,34 @@ Diario Médico - Mis Resultados de Exámenes
 <p>
 <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis síntomas</button></a>
 <a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mi estado de ánimo</button></a>
-<a href="/paciente/diariomedico/mediciones/"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
-<a href="/paciente/diariomedico/rutinas/"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
-<a href="/paciente/diariomedico/tratamientos/"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
-<a href="/paciente/diariomedico/resultados/"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
-<a href="/paciente/diariomedico/citas/"><button type="button" class="btn btn-primary btn-sm">Mis próximas ciitas</button></a>                             
+<a href="{% url 'listar_peso_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis mediciones médicas</button></a>
+<a href="{% url 'listar_ejercicio_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis rutinas de salud</button></a>
+<a href="{% url 'listar_medicamento_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis tratamientos</button></a>
+<a href="{% url 'listar_resultado_lab_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
+<a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis próximas citas</button></a>  
 </p>
 
 <div class="row">
-  <div class="col-lg-5">
+  <div class="col-lg-12">
     <div class="panel panel-default">
                             <div class="panel-heading">
-                               <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Resultados de laboratorio</button></a>
+                               <a href="{% url 'listar_resultado_lab_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Resultados de laboratorio</button></a>
                             </div>
                             <div class="panel-body">
+                                <div class="col-lg-4">
+                    <div class="well well-sm">
+                    <div class="alert alert-info">
+                        <h5><label>Resultados: </label></h5></div>
+                                     <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
+              {{ form }}
+              <p></p>
+              <div class="tooltip-demo">
+ <button type="submit" class="btn btn-info btn-circle" data-toggle="tooltip" data-placement="right" title="" data-original-title="Ingresar resultado"><i class="fa fa-check"></i></button>
+ </div>
+ <p></p>
+              </form>
+                    </div>
+                </div>
                
   </div>
                                
