--- a/templates/pacientes/resultados_examenes/mis_resultados_examenes_listar_form.html
+++ b/templates/pacientes/resultados_examenes/mis_resultados_examenes_listar_form.html
@@ -1,7 +1,7 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Listar Síntomas
+Diario Médico - Listar Resultados de Exámenes
 {% endblock %}
 
 {% block content %}
@@ -20,17 +20,14 @@ Diario Médico - Listar Síntomas
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
-                                   <div class="panel-heading">
-                             <h3 class="panel-title"> </h3>
-                  <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas generales actuales</button></a>
-                    <a href="{% url 'listar_sintomas_alteracion_glicemica_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas alteración glicémica</button></a>
-                                
+                            <div class="panel-heading">
+                               <a href="{% url 'listar_resultado_lab_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Resultados de laboratorio</button></a>
                             </div>
                             <div class="panel-body">
-            <div class="col-lg-6">
+                           <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
-                           <a href="{% url 'pacientes_sintomas_ingresar' %}"><h4><i class="fa fa-plus-square"></i> Adicionar síntoma</h4></a>
+                           <a href="{% url 'ingresar_resultado_lab_paciente' %}"><h4><i class="fa fa-plus-square"></i> Adicionar resultado</h4></a>
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -39,16 +36,16 @@ Diario Médico - Listar Síntomas
                                     <thead>
                                         <tr>
           
-                                            <th>Descripción del síntoma</th>
+                                            <th>Resultado</th>
                                          
                                         </tr>
                                     </thead>
-                                    {% for sintomas in object_list %}
+                                    {% for resultadolab in object_list %}
                                     <tbody>
                                         <tr>
-                                            <td>{{sintomas.sintoma}}</td>
+                                            <td>{{resultadolab.nombre_analisis}}</td>
                                              <td>
-                                                 <a href={% url 'eliminar_sintomas_paciente' sintomas.id %}>Eliminar</a>
+                                                 <a href={% url 'eliminar_resultado_lab_paciente' resultadolab.id %}>Eliminar</a>
                                                
                                             </td>
                                             
@@ -70,5 +67,6 @@ Diario Médico - Listar Síntomas
    </div>
 
 </div><!-- /.row -->
+
 
 {% endblock %}
