--- a/templates/pacientes/rutinas/mis_rutinas_alimentacion_confirmar_delete_form.html
+++ b/templates/pacientes/rutinas/mis_rutinas_alimentacion_confirmar_delete_form.html
@@ -1,7 +1,7 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Eliminar Estado de Ánimo
+Diario Médico - Eliminar Rutinas de Alimentación
 {% endblock %}
 
 {% block content %}
@@ -16,19 +16,20 @@ Diario Médico - Eliminar Estado de Ánimo
 <a href="{% url 'listar_resultado_lab_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis resultados de exámenes</button></a>
 <a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-primary btn-sm">Mis próximas citas</button></a>  
 </p>
+
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
-                               <div class="panel-heading">
-                             <h3 class="panel-title"> </h3>
-                  <a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Estado de ánimo actual</button></a>
-                          
+                            <div class="panel-heading">
+                            <a href="{% url 'listar_ejercicio_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Ejercicio</button></a>
+                    <a href="{% url 'listar_alimentacion_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Alimentación</button></a>
+                                
                             </div>
                             <div class="panel-body">
-            <div class="col-lg-6">
+   <div class="col-lg-6">
             <div class="well">
                        
-                               <h5><label>¿Está seguro de que quiere eliminar este estado?</label></h5>
+                               <h5><label>¿Está seguro de que quiere eliminar este alimento?</label></h5>
                     <p></p>
  <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
              <div class="tooltip-demo">
@@ -41,7 +42,7 @@ Diario Médico - Eliminar Estado de Ánimo
               </form>
  <p></p>
  <div class="tooltip-demo">
-   <a href="{% url 'listar_estado_animo_paciente' %}">
+   <a href="{% url 'listar_alimentacion_paciente' %}">
    <button type="button" class="btn btn-primary btn-circle btn-lg" data-toggle="tooltip" data-placement="right" title="" data-original-title="Regresar"><i class="fa fa-list"></i> 
                             </button></a></div><p></p>
                     </div>
@@ -55,5 +56,6 @@ Diario Médico - Eliminar Estado de Ánimo
    </div>
 
 </div><!-- /.row -->
+
 
 {% endblock %}
