--- a/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_confirmar_delete_form.html
+++ b/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_confirmar_delete_form.html
@@ -1,7 +1,7 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Eliminar Estado de Ánimo
+Diario Médico - Eliminar Síntomas
 {% endblock %}
 
 {% block content %}
@@ -19,16 +19,17 @@ Diario Médico - Eliminar Estado de Ánimo
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
-                               <div class="panel-heading">
+                                <div class="panel-heading">
                              <h3 class="panel-title"> </h3>
-                  <a href="{% url 'listar_estado_animo_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Estado de ánimo actual</button></a>
-                          
+                  <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas generales actuales</button></a>
+                    <a href="{% url 'listar_sintomas_alteracion_glicemica_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas alteración glicémica</button></a>
+                                
                             </div>
                             <div class="panel-body">
             <div class="col-lg-6">
             <div class="well">
                        
-                               <h5><label>¿Está seguro de que quiere eliminar este estado?</label></h5>
+                               <h5><label>¿Está seguro de que quiere eliminar este síntoma?</label></h5>
                     <p></p>
  <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
              <div class="tooltip-demo">
@@ -41,7 +42,7 @@ Diario Médico - Eliminar Estado de Ánimo
               </form>
  <p></p>
  <div class="tooltip-demo">
-   <a href="{% url 'listar_estado_animo_paciente' %}">
+   <a href="{% url 'listar_sintomas_alteracion_glicemica_paciente' %}">
    <button type="button" class="btn btn-primary btn-circle btn-lg" data-toggle="tooltip" data-placement="right" title="" data-original-title="Regresar"><i class="fa fa-list"></i> 
                             </button></a></div><p></p>
                     </div>
