--- a/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_form.html
+++ b/templates/pacientes/sintomas/alteracionglicemica/mis_sintomas_alteracion_glicemica_form.html
@@ -1,11 +1,10 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Mis Próximas Citas
+Diario Médico - Ingresar Síntomas
 {% endblock %}
 
 {% block content %}
-
 <br>
 <h1 class="page-header">Mi Diario Médico</h1>
 <p>
@@ -19,33 +18,37 @@ Diario Médico - Mis Próximas Citas
 </p>
 <div class="row">
   <div class="col-lg-12">
+
     <div class="panel panel-default">
-                           <div class="panel-heading">
-                                <a href="{% url 'listar_cita_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Citas</button></a>
+                            <div class="panel-heading">
+                             <h3 class="panel-title"> </h3>
+                  <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas generales actuales</button></a>
+                    <a href="{% url 'listar_sintomas_alteracion_glicemica_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas alteración glicémica</button></a>
+                                
                             </div>
-                            <div class="panel-body">
-                                           <div class="col-lg-4">
+                            <div class="panel-body">	
+                            <div class="col-lg-6">
                     <div class="well well-sm">
                     <div class="alert alert-info">
-                        <h5><label>Citas: </label></h5></div>
+                        <h5><label>Selecciona un síntoma de la lista: </label></h5></div>
                                      <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
               {{ form }}
               <p></p>
               <div class="tooltip-demo">
- <button type="submit" class="btn btn-info btn-circle" data-toggle="tooltip" data-placement="right" title="" data-original-title="Ingresar cita"><i class="fa fa-check"></i></button>
+ <button type="submit" class="btn btn-info btn-circle" data-toggle="tooltip" data-placement="right" title="" data-original-title="Ingresar síntoma"><i class="fa fa-check"></i></button>
  </div>
  <p></p>
               </form>
                     </div>
                 </div>
-               
+        
   </div>
                                
                             </div>
+                            
 
    </div>
 
 </div><!-- /.row -->
-
 
 {% endblock %}
