--- a/templates/pacientes/tratamientos/mis_tratamientos_listar_terapias_form.html
+++ b/templates/pacientes/tratamientos/mis_tratamientos_listar_terapias_form.html
@@ -1,7 +1,7 @@
 {% extends "pacientes/index.html" %}
 
 {% block title %}
-Diario Médico - Listar Síntomas
+Diario Médico - Listar Terapias
 {% endblock %}
 
 {% block content %}
@@ -20,17 +20,15 @@ Diario Médico - Listar Síntomas
 <div class="row">
   <div class="col-lg-12">
     <div class="panel panel-default">
-                                   <div class="panel-heading">
-                             <h3 class="panel-title"> </h3>
-                  <a href="{% url 'listar_sintomas_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas generales actuales</button></a>
-                    <a href="{% url 'listar_sintomas_alteracion_glicemica_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Síntomas alteración glicémica</button></a>
-                                
+       <div class="panel-heading">
+                                <a href="{% url 'listar_medicamento_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Medicamentos</button></a>
+                    <a href="{% url 'listar_terapia_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Terapias</button></a>
                             </div>
                             <div class="panel-body">
             <div class="col-lg-6">
               <div class="panel panel-default">
                         <div class="panel-heading">
-                           <a href="{% url 'pacientes_sintomas_ingresar' %}"><h4><i class="fa fa-plus-square"></i> Adicionar síntoma</h4></a>
+                           <a href="{% url 'ingresar_terapia_paciente' %}"><h4><i class="fa fa-plus-square"></i> Adicionar terapia</h4></a>
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
@@ -39,16 +37,16 @@ Diario Médico - Listar Síntomas
                                     <thead>
                                         <tr>
           
-                                            <th>Descripción del síntoma</th>
+                                            <th>Terapia</th>
                                          
                                         </tr>
                                     </thead>
-                                    {% for sintomas in object_list %}
+                                    {% for terapia in object_list %}
                                     <tbody>
                                         <tr>
-                                            <td>{{sintomas.sintoma}}</td>
+                                            <td>{{terapia.nombre}}</td>
                                              <td>
-                                                 <a href={% url 'eliminar_sintomas_paciente' sintomas.id %}>Eliminar</a>
+                                                 <a href={% url 'eliminar_terapia_paciente' terapia.id %}>Eliminar</a>
                                                
                                             </td>
                                             
