--- a/zinnia/templates/zinnia/base_v3.html
+++ b/zinnia/templates/zinnia/base_v3.html
@@ -1,17 +1,19 @@
-
-{% load i18n staticfiles %}
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
-<html xml:lang="{{ LANGUAGE_CODE }}" lang="{{ LANGUAGE_CODE }}" version="-//W3C//DTD XHTML 1.1//EN" xmlns="http://www.w3.org/1999/xhtml">
+<!--[if IE 7]>
+<html class="ie ie7" lang="en-US">
+<![endif]-->
+<!--[if IE 8]>
+<html class="ie ie8" lang="en-US">
+<![endif]-->
+<!--[if !(IE 7) | !(IE 8)  ]><!-->
+<html lang="en-US">
 <!--<![endif]-->
 <head>
-  <title>Hub Salud &middot; Blog{% block title %}{% endblock title %}{% block title-page %}{% endblock title-page %}</title>
+  <title>Hub Salud &middot; Blog</title>
   <meta name="author" content="qktheme">
   <link rel="profile" href="http://gmpg.org/xfn/11">
   <link rel="pingback" href="http://demo.qkthemes.com/medicine/xmlrpc.php">
-  <meta http-equiv="content-type" content="text/html; charset=utf-8" />
-  <meta http-equiv="cache-control" content="public" />
-  <meta name="robots" content="follow, all" />
-  <meta name="language" content="{{ LANGUAGE_CODE }}" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <!-- For SEO -->
       <!-- End SEO-->
@@ -719,20 +721,14 @@ color:#ffa902;
 <meta name="generator" content="WordPress 3.9.2" />
 <link rel='canonical' href='http://demo.qkthemes.com/medicine/blog-rightbar/' />
 <link rel='shortlink' href='http://demo.qkthemes.com/medicine/?p=34' />
-{% block meta %}{% endblock meta %}
-    <link rel="pingback" href="/xmlrpc/" />
-    <link rel="shortcut icon" href="http://www.techmobilesoft.com/hubmedico/images/registro_menu.png"/>
 
       <!--[if lt IE 9]>
         <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
       <![endif]-->
-    <style type="text/css" title="dynamic-css" class="options-output">body{font-family:Raleway;font-weight:400;font-style:normal;font-size:12px;line-height:20px;color:#06030F;}</style>
-    {% block link %}{% endblock link %}
-    {% block script %}{% endblock script %}
-    </head>
+    <style type="text/css" title="dynamic-css" class="options-output">body{font-family:Raleway;font-weight:400;font-style:normal;font-size:13px;line-height:20px;color:#dddddd;}</style></head>
 <body class="page page-id-34 page-template page-template-template-blog-php">
-      <!-- Container -->
+    <!-- Container -->
   <div id="container">
     <!-- Header
         ================================================== -->
@@ -784,9 +780,10 @@ color:#ffa902;
         ================================================== -->
       <div class="section-content page-banner blog-page-banner">
         <div class="container">
-        <br>
-        <br>
-        <h1> Blog Actualidad Médica
+        <h1>
+        
+            Blog Actualidad Médica
+          
         </h1>
 
         </div>
@@ -797,16 +794,46 @@ color:#ffa902;
         <div class="container">
                 <div class="blog-box">
                   <div class="row">
-             <div class="blog-list col-lg-9 col-md-9">
- {% block slider %}{% endblock slider %}
- {% block content %}
- {% endblock content %}
-            </div>
+                   
+                                                <div class="blog-list col-lg-9 col-md-9">
+
+                                                                                              <div class="blog-post triggerAnimation animated" data-animate="slideInUp">
+  <div class="post-84 post type-post status-publish format-standard has-post-thumbnail hentry category-blog" id="post-84">
+
+          <img class="img-responsive" src="http://demo.qkthemes.com/medicine/wp-content/uploads/bfi_thumb/blog10-2wu6jlz6t62cuk9tn5v5s0.jpg" alt="ALIQUAM TINCIDUNT MAURIS EU RISUS." />
+    <div class="post-content">
+    <div class="post-date">
+      <p><span>23</span>05</p>
+    </div>
+    <div class="content-data">
+      <h2><a href="http://demo.qkthemes.com/medicine/aliquam-tincidunt-mauris-eu-risus-8/">Hipoglucemia</a></h2>
+      <p>By: <a href="http://demo.qkthemes.com/medicine/author/admin/" title="Posts by admin" rel="author">admin</a> | <a href="http://demo.qkthemes.com/medicine/aliquam-tincidunt-mauris-eu-risus-8/#respond" title="Comment on ALIQUAM TINCIDUNT MAURIS EU RISUS.">0 Commentarios </a></p>
+    </div>
+    <p>Es una afección que ocurre cuando el nivel de azúcar en la sangre (glucosa) está demasiado bajo. El azúcar en la sangre
+    por debajo de 70 mg/dL se considera bajo. El azúcar sanguíneo a este nivel o por debajo puede ser dañino.&hellip;]</p>
+    <a class="button-third" href="#">Leer más</a>
+  </div>
+  </div>
+
+</div>
+        <div class=" text-center">
+                  <ul class="pagination">
+  <li><span class='page-numbers current'>1</span></li>
+  <li><a class='page-numbers' href='#'>2</a></li>
+  <li><a class="next page-numbers" href="/#/">Siguiente &raquo;</a></li>
+</ul>
+                </div>
+                                    </div>
  <div class="col-md-3">
-
-
+ 
 <div class="sidebar">
+<div id="widget-welcome" class="widget">
+  <h3>Hub Salud</h3>
+  <h4>
+    La información que necesita sobre su salud a un click de distancia
+  </h4>
 
+</div>
 
   <aside id="search-2" class="widget widget_search">    <div class="search-widget">
     
