--- a/templates/inicio/preguntasrespuestas_form.html
+++ b/templates/inicio/preguntasrespuestas_form.html
@@ -38,7 +38,7 @@ Aplicaciones - Consultas
                   <ul class="nav nav-pills nav-stacked">
                       <li class="active"><a href=/home/pr/creacion>Preguntas de tus pacientes</a></li>
                       <li><a href=/home/servicios/creacion>Tus servicios</a></li>
-                      <li><a href="#">Blog</a></li>
+                      <li><a href={% url 'ingresar_entrada_blog' %}>Blog</a></li>
                    
               </div>
           </div>
