--- a/templates/admin/base_site.html
+++ b/templates/admin/base_site.html
@@ -1,9 +1,9 @@
 {% extends "admin/base.html" %}
 
-{% block title %}{{ title }} | {{ site_title|default:_('Sitio Administrativo para Hub Médico') }}{% endblock %}
+{% block title %}{{ title }} | {{ site_title|default:_('Sitio Administrativo Hub Salud') }}{% endblock %}
 
 {% block branding %}
-<h1 id="site-name"><a href="{% url 'admin:index' %}">{{ site_header|default:_('Administración Hub Médico') }}</a></h1>
+<h1 id="site-name"><a href="{% url 'admin:index' %}">{{ site_header|default:_('Administración Hub Salud') }}</a></h1>
 {% endblock %}
 
 {% block nav-global %}{% endblock %}
