--- a/templates/blog/entradas_blog_confirmar_delete_form.html
+++ b/templates/blog/entradas_blog_confirmar_delete_form.html
@@ -1,7 +1,7 @@
 {% extends "inicio/board.html" %}
 
 {% block title %}
-Aplicaciones - Listar Experiencia Académica
+Aplicaciones - Eliminar Servicios
 {% endblock %}
 
 {% block content %}
@@ -27,7 +27,7 @@ Aplicaciones - Listar Experiencia Académica
                 </div>
             </div>
         </div>
-          <div class="box">
+         <div class="box">
 
           <div class="box-header">
               <i class="icon-bookmark"></i>
@@ -38,7 +38,7 @@ Aplicaciones - Listar Experiencia Académica
                   <ul class="nav nav-pills nav-stacked">
                       <li><a href=/home/pr/creacion>Preguntas de tus pacientes</a></li>
                       <li><a href=/home/servicios/creacion>Tus servicios</a></li>
-                      <li><a href={% url 'ingresar_entrada_blog' %}>Blog</a></li>
+                      <li><a href="#">Blog</a></li>
                    
               </div>
           </div>
@@ -74,42 +74,26 @@ Aplicaciones - Listar Experiencia Académica
               <div class="panel-heading">
                 <h4 class="panel-title">
                   <legend class="lead">
-                        Tu Información Académica
+                        Servicios
                     </legend>
                 </h4>
               </div>
               <!-- Desplegable 1 -->
               <div id="collapseOne" class="panel-collapse collapse in">
                 <div class="panel-body">
-                    <div class="box pattern pattern-sandstone">
-                            <div class="box-header">
-                                <i class="icon-table"></i>
-                                <h5>
-                                     <a href="{% url 'crear_info_academica' %}">Adicionar información académica</a>
-                                </h5>
-                            </div>
-                            <div class="box-content box-table">
-                                <table id="sample-table" class="table table-hover table-bordered tablesorter">
-                                    <thead>
-                                        <tr>
-                                            <th class="header">Institución</th>
-                                           
-                                        </tr>
-                                    </thead>
-                                    {% for perfilacademico in object_list %}
-                                    <tbody>
-                                        <tr>
-                                            <td><a href="{% url 'actualizar_info_academica' perfilacademico.id %}">{{perfilacademico.institucion}}</a></td>
-                                            <td class="td-actions">
-                                                 <a href="{% url 'actualizar_info_academica' perfilacademico.id %}">Actualizar</a>
-                                                 <a href="{% url 'eliminar_info_academica' perfilacademico.id %}">Eliminar</a>
-                                            </td>
-                                        </tr>
-                                    </tbody>
-                                    {% endfor %}
-                                </table>
-                            </div>
-                        </div>
+  
+                    <p>¿Está seguro de que quiere eliminar este servicio?</p>
+                    <p></p>
+ <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
+              
+                 <input type="submit" value="Eliminar" class="btn btn-primary">
+                    
+              </form>
+ <p></p>
+   <a href="{% url 'listar_info_servicios' %}"><button type="submit" class="btn btn-primary">
+                            <i class="icon-ok"></i>
+                            Cancelar
+                        </button></a><p></p>
               </div>
             </div>
             </div>
