--- a/templates/inicio/actualizarpr_form.html
+++ b/templates/inicio/actualizarpr_form.html
@@ -37,7 +37,7 @@ Aplicaciones - Actualizar Preguntas
                 <div class="btn-group-box">
                     <a href=/home/consultas /><button class="btn"><i class="icon-pencil icon-large"></i><br>Preguntas</button></a>
                     <a href="/blog/" target="_blank"><button class="btn"><i class="icon-tags icon-large"></i><br>Blog</button></a>
-                    <a href="#"><button class="btn"><i class="icon-tags icon-large"></i><br>Servicios</button></a>
+                    <a href={% url 'ingresar_entrada_blog' %}><button class="btn"><i class="icon-tags icon-large"></i><br>Servicios</button></a>
                 </div>
             </div>
         </div>
