--- a/templates/perfil/profesional_form.html
+++ b/templates/perfil/profesional_form.html
@@ -38,7 +38,7 @@ Perfil - Profesional
                   <ul class="nav nav-pills nav-stacked">
                       <li><a href=/home/pr/creacion>Preguntas de tus pacientes</a></li>
                       <li><a href=/home/servicios/creacion>Tus servicios</a></li>
-                      <li><a href="#">Blog</a></li>
+                      <li><a href={% url 'ingresar_entrada_blog' %}>Blog</a></li>
                    
               </div>
           </div>
