Actualización banner home

--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -743,7 +743,7 @@ color:#ffa902;
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="/" title="Marble">
-						  <img src="{{MEDIA_URL}}/images/logoHome.png" alt="Marble">
+						  <img src="{{MEDIA_URL}}/images/LogoBanerHubSalud.png" alt="Marble">
 												</a>
 					</div>
 					<div class="navbar-collapse collapse">
