--- a/templates/inicio/index.html
+++ b/templates/inicio/index.html
@@ -10,7 +10,7 @@
 <html lang="en-US">
 <!--<![endif]-->
 <head>
-	<title>Hub Salud &middot; Consultorio Virtual</title>
+	<title>Hub Salud</title>
 	<meta name="author" content="qktheme">
 	<link rel="profile" href="http://gmpg.org/xfn/11">
 	<link rel="pingback" href="http://demo.qkthemes.com/medicine/xmlrpc.php">
@@ -743,7 +743,7 @@ color:#ffa902;
 							<span class="icon-bar"></span>
 						</button>
 						<a class="navbar-brand" href="/" title="Marble">
-						  <img src="{{MEDIA_URL}}/images/LogoBanerHubSalud.png" alt="Marble">
+						  <img src="{{MEDIA_URL}}/images/logoHome.png" alt="Marble">
 												</a>
 					</div>
 					<div class="navbar-collapse collapse">
