--- a/templates/pacientes/index.html
+++ b/templates/pacientes/index.html
@@ -92,7 +92,7 @@
                         <i class="fa fa-user fa-fw"></i>  <i class="fa fa-caret-down"></i>
                     </a>
                     <ul class="dropdown-menu dropdown-user">
-                        <li><a href="#"><i class="fa fa-user fa-fw"></i> Perfil </a>
+                        <li><a href="{% url 'perfil_basico_contactos_paciente' %}"><i class="fa fa-user fa-fw"></i> Perfil </a>
                         </li>
                         <li class="divider"></li>
                         <li><a href="/logout/"><i class="fa fa-sign-out fa-fw"></i> Salir</a>
@@ -112,7 +112,7 @@
                             <a href="#"><i class="fa fa-home fa-fw"></i> Actividad</a>
                         </li>
                          <li>
-                            <a href="{% url 'perfil_principal_paciente' %}"><i class="fa fa-user fa-fw"></i> Mi perfil</a>
+                            <a href="{% url 'perfil_basico_contactos_paciente' %}"><i class="fa fa-user fa-fw"></i> Mi perfil</a>
                         </li>
                                 
                         <li>
