--- a/templates/pacientes/menu_historia_clinica_antecedentes_personales.html
+++ b/templates/pacientes/menu_historia_clinica_antecedentes_personales.html
@@ -2,3 +2,9 @@
  <a href="{% url 'listar_resumenclinico_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Mi Historia Médica</button></a>
                                <a href="{% url 'listar_enfermedad_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Mis Enfermedades</button></a>
                                <a href="{% url 'listar_cirugia_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Mis Cirugías</button></a>
+                               <a href="{% url 'listar_alergias_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Mis Alergias</button></a>
+                               <a href="{% url 'listar_inmunizacion_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Mis Vacunas</button></a>
+                               <a href="{% url 'listar_medicamento_historial_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Mis Medicamentos</button></a>
+                               <a href="{% url 'listar_resumenclinico_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Mis Tóxicos Alérgicos</button></a>
+                               <a href="{% url 'listar_enfermedad_paciente' %}"><button type="button" class="btn btn-outline btn-info"><i class="fa fa-user-md"></i> Mis Gineco-obstréticos</button></a>
+                               
