--- a/templates/pacientes/menu_perfil_datos.html
+++ b/templates/pacientes/menu_perfil_datos.html
@@ -1,8 +1,12 @@
+    
       <ul class="nav navbar-nav">
-                                <li class="active"><a href="/paciente/perfilbasico/">Mis Datos Personales</a>
+
+                                <li><a href="/paciente/perfilbasico">Mis Datos Personales</a>
                                 </li>
                                 <li><a href="/paciente/perfilbasico/contacto">Mis Datos de Contacto</a>
                                 </li>
                                 <li><a href="/paciente/perfilbasico/social">Mis Redes Sociales</a>
                                 </li>
+                        
                             </ul>
+                            
