--- a/templates/pacientes/perfil/perfil_basico_form.html
+++ b/templates/pacientes/perfil/perfil_basico_form.html
@@ -20,14 +20,18 @@ Perfil - Básico
                         <div class="navbar-collapse collapse">
                       {% include 'pacientes/menu_perfil_datos.html' %}
                         </div>
+
                         <!--/.nav-collapse -->
                     </div>
                 </div>
+
 <div class="row">
   <div class="col-lg-5">
     <div class="panel panel-default">
                             <div class="panel-heading">
-                                <h3 class="panel-title"><i class="fa fa-user"></i></h3>
+                                <h3 class="panel-title"><i class="fa fa-user"></i> Mis Datos Personales</h3>
+                                 <br>
+                                 <a href="{% url 'perfil_principal_paciente' %}"><button type="button" class="btn btn-primary btn-xs">Ver Mi Perfil Público</button></a>
                             </div>
                             <div class="panel-body">
                                  <form enctype="multipart/form-data" class="form-horizontal" method="POST">{% csrf_token %}
